--- a/src/sass/global/_base.scss
+++ b/src/sass/global/_base.scss
@@ -85,5 +85,23 @@ scrollbar-track-piece {
 	* {
 		scrollbar-color: var(--c-scrollbar-thumb) var(--c-scrollbar-track) !important; // second parameter (transparent) is for bg-thumb
 		scrollbar-width: thin !important;
+
+  /* Language dropdown and options */
+  [role='listbox'], [role='menu'] {
+    background-color: var(--c-bg-contextmenu) !important;
+    border-radius: var(--br-contextmenu) !important;
+    padding: var(--p-contextmenu) !important;
+    box-shadow: var(--box-shadow-contextmenu) !important;
+
+    [role='option'], [role='menuitem'] {
+      border-radius: var(--br-btn);
+      padding: var(--p-contextmenu-item) !important;
+      transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+
+      &:hover {
+        background-color: var(--c-bg-contextmenu-item) !important;
+      }
+    }
+  }
 	}
 }
