--- a/src/sass/global/_colors-bgs.scss
+++ b/src/sass/global/_colors-bgs.scss
@@ -75,9 +75,14 @@
 	- GPTs Store PAGE - "Featured" section items bg
 	- GPTs Store PAGE - Bg for Buttons left and right arrow for "Top picks", "DALLE", "Writing" etc tags on smaller screens
 	- Inputs in "Delete Account- Are you sure" dialog  */
+[class*='dark:bg-gray-700'], [role='option'], [role='menuitem'] {
 [class*='dark:bg-gray-700'] {
-	background-color: var(--c-surface-2) !important;
-	// background-color: red !important;
+  background-color: var(--c-surface-2) !important;
+
+  &:hover {
+    background-color: var(--c-bg-contextmenu-item) !important;
+  }
+}
 }
 
 /* 
